Renamed packages to roles
